frontend/scss/molecules/_m-link-list.scss
/***

```
<ul class="m-link-list">
  <li><a href="#">Evening Event Program</a></li>
  <li><a href="#">Evening Event Program<svg aria-hidden="true" class="icon--new-window"><use xlink:href="#icon--new-window" /></svg></a></li>
  <li><a href="#">Evening Event Program<svg aria-hidden="true" class="icon--new-window"><use xlink:href="#icon--new-window" /></svg></a></li>
</ul>
```

***/

.m-link-list {
  @include untuck;
  margin-top: 40px;
}

.m-link-list__sub-list {
  margin-top: 16px;
  padding-left: 20px;

  .o-blocks__block & {
    margin-top: 20px;
  }
}

.m-link-list__item {
  position: relative;
  margin-top: 16px;
  padding-top: 8px;

  .o-blocks__block & {
    margin-top: 20px;
  }
}

.m-link-list__item:first-child {
  margin-top: 0;
}

//.m-link-list__item:only-child::before,
.m-link-list__item::after {
  content: '';
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  top: 0;
  height: 1px;
  background-color: $color__rules--primary;
}

.m-link-list__item:only-child::before {
  top: auto;
  bottom: -12px;
}

.m-link-list__item.s-active::after {
  background-color: $color__rules--secondary;
}

.m-link-list__sub-list .m-link-list__item::after {
  background-color: $color__rules--tertiary;
}

.m-link-list__trigger {
  display: block;
  position: relative;
  padding-right: 32px;
}

.m-link-list__trigger.f-module-title-1 {
  @include tucked-align-top($f-module-title-1);
  color: $color__text--title;
}

a.m-link-list__trigger.f-module-title-1 {
  &:hover,
  &:focus:hover {
    color: $color__link--hover;
  }

  &:active:hover {
    color: $color__link--accent;
  }
}

.m-link-list__trigger.f-secondary {
  @include tucked-align-top($f-secondary);
  color: $color__link;
}

.m-link-list__trigger.f-secondary.closing-soon {
  color: $color__text--limited;
}

a.m-link-list__trigger.f-secondary {

  &:hover,
  &:focus:hover {
    color: $color__link--hover;
  }

  &:active:hover {
    color: $color__link--active;
  }
}

.m-link-list__item.s-active > .m-link-list__trigger.f-module-title-1,
.m-link-list__item.s-active > .m-link-list__trigger.f-secondary {
  color: $color__text--accent;

  &:hover,
  &:focus:hover,
  &:active:hover {
    color: $color__text--accent;
  }
}

.m-link-list__trigger svg,
.m-link-list--download .m-link-list__trigger .icon--download--24 {
  position: absolute;
  right: 0;
  top: 12px;
}

.m-link-list--download .m-link-list__trigger:hover .icon--download--24,
.m-link-list--download .m-link-list__trigger:focus .icon--download--24 {
  color: $color__text--title;
}

.m-link-list--download .m-link-list__trigger {
  display: flex;
  flex-flow: row nowrap;
}

.m-link-list__trigger-file-name,
.m-link-list__trigger-file-meta {
  flex: 0 0 auto;
  width: 66%;
  padding-right: 32px;
}

.m-link-list__trigger-file-meta {
  width: 33%;
  color: $color__text--secondary;
}

